end of 1.2 docker and beginning of 1.1 terraform and gcp

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,8 @@ ny_taxi_postgres_data/
 # Ignore Docker container logs
 *.log
 
-# Ignore parquet files
-*.parquet
+# Ignore csv files
+*.csv
+
+# Ignore everything in terraform folder 
+terraform/
